Second commit. list-author = user

--- a/client/templates/lists/list.html
+++ b/client/templates/lists/list.html
@@ -3,8 +3,7 @@
         {{#with list}}
             <h2>List: {{title}}</h2>
             {{#each ingredients}}
-                <a class="header">{{name}}</a>
-
+                <a class="header">{{name}}</a>
             {{else}}
                 No Ingredients
             {{/each}}
@@ -12,7 +11,4 @@
     {{else}}
         loading...
     {{/if}}
-
-
-
 </template>
