--- a/client/templates/shared/header.html
+++ b/client/templates/shared/header.html
@@ -1,10 +1,14 @@
 <template name="header">
 <h1>header</h1>
+    <a class="item" href="{{pathFor 'home' }}">home</a>
+    <a class="item" href="{{pathFor 'about' }}">about</a>
+    <a class="item" href="{{pathFor 'lists' }}">lists</a>
+    <a class="item" href="{{pathFor 'ingredients' }}">ingredients</a>
     {{#if currentUser}}
-        <p>You're logged in!</p>
+
+        <p>Welcome {{currentUser.username}}! You're logged in!</p>
+
         <a href="#" class="logout">Logout</a>
-        <a class="item" href="{{pathFor 'home' }}">home</a>
-        <a class="item" href="{{pathFor 'about' }}">about</a>
-        <a class="item" href="{{pathFor 'lists' }}">lists</a>
+
     {{/if}}
 </template>
