Third commit. rubaxa + page transition added

--- a/client/templates/layouts/layout.html
+++ b/client/templates/layouts/layout.html
@@ -2,8 +2,9 @@
         <header>
             {{> Template.dynamic template=header}}
         </header>
-
-        {{> Template.dynamic template=main}}
+        {{#momentum plugin='flow-router'}}
+            {{> Template.dynamic template=main}}
+        {{/momentum}}
 
         <footer>
             {{> Template.dynamic template=footer}}
