--- a/client/templates/pages/about.html
+++ b/client/templates/pages/about.html
@@ -1,3 +1,5 @@
 <template name="about">
-    <div class="about"><h1>aboutpage</h1></div>
+    {{#momentum plugin='right-to-left'}}
+        <div class="about"><h1>aboutpage</h1></div>
+    {{/momentum}}
 </template>
