--- a/client/templates/pages/home.html
+++ b/client/templates/pages/home.html
@@ -1,3 +1,7 @@
 <template name="home">
-    <div class="about"><h1>homepage</h1></div>
+    {{#momentum plugin='left-to-right'}}
+
+        <div class="about"><h1>homepage</h1></div>
+    {{/momentum}}
+
 </template>
