--- a/client/templates/shared/head.html
+++ b/client/templates/shared/head.html
@@ -1,5 +1,6 @@
 <head>
     <title>RCP</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
-    <link rel="stylesheet" type="text/css" href="client/stylesheets/style.css">
+    <!--<link rel="stylesheet" type="text/css" href="client/stylesheets/style.css">-->
+    <!--<script type="text/javascript" src="/client/stylesheets/waves.js"></script>-->
 </head>
