--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -40,36 +40,10 @@ footer {
     top: 0;
 }
 
-.home, .about {
-    position: fixed;
-    min-width: 100%;
-}
-.lists {
+.home, .about, .lists, .ingredients  {
     position: absolute;
     min-width: 100%;
     height:100%;
-}
-
-ul {
-    list-style: none;
-    padding: 0;
-}
-
-li {
-    background: #eee;
-    margin: 1px;
-    padding: 10px 15px;
-    cursor: move;
-    border-radius: 5px;
-}
-
-.sortable-ghost {
-    opacity: .3;
-    background: #f60;
-}
-#listC {
-    border: 2px dashed #f60;
-    min-height: 100px
 }
 
 /*!
