--- a/client/templates/searchForm/searchForm.html
+++ b/client/templates/searchForm/searchForm.html
@@ -1,6 +1,8 @@
 <template name="searchForm">
-    <form id="filter">
-        {{> esInput index="lists" id="search" placeholder="Search..." }}
-        <a href="" class="addItem" >Add</a>
-    </form>
+    <!--<form id="filter">-->
+        <!--<div class="searchDiv">-->
+            <!--{{> esInput index="ingredients" id="search" placeholder="Search..." }}-->
+        <!--</div>-->
+        <!--<a href="" class="addItem" >Add</a>-->
+    <!--</form>-->
 </template>
