--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -40,7 +40,7 @@ footer {
     top: 0;
 }
 
-.home, .about, .lists, .ingredients  {
+.home, .about, .lists, .ingredients, .list  {
     position: absolute;
     min-width: 100%;
     height:100%;
